Add white background color when there are no upcoming events. #5

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -276,6 +276,7 @@ body {
 .results-no-events-container {
   height: 100%;
   width: 100%;
+  background-color: white;
 }
 
 .results-no-events-txt {
