--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -110,3 +110,13 @@
 .relative {
   position: relative;
 }
+
+.modal {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgb(0 0 0 / 70%);
+  z-index: 1;
+}
