--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -923,6 +923,10 @@ body {
   background-color: rgb(244 86 60 / 90%);
 }
 
+.home-event-card-container:hover {
+  transform: scale(1.1);
+}
+
 /* ----------MEDIA QUERIES---------- */
 
 /* @media only screen and (max-width: 1350px) {
