--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -343,7 +343,9 @@ body {
   font-family: Montserrat, sans-serif;
   font-weight: 500;
   text-align: center;
-  font-size: 28px;
+  font-size: 24px;
+  margin-top: 0;
+  margin-bottom: 5px;
 }
 
 .event-info-txt-container {
