Refactor code for 'footer.jsx' component to keep footer at the bottom of the screen. #11

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -124,3 +124,12 @@
   cursor: auto;
   outline: none;
 }
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;
+}
