--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -88,6 +88,7 @@ body {
 
 .home-layout-container {
   height: 400px;
+  margin-bottom: 40px;
 }
 
 .home-container {
@@ -863,13 +864,13 @@ body {
 
 /* ----------FOOTER---------- */
 
-/* .footer-container {
+.footer-container {
+  position: absolute;
   background-color: #292826;
-  height: 30px;
-  padding: 0 60px;
-  margin-top: 50px;
-  flex-shrink: 0;
-} */
+  bottom: 0;
+  height: 2.5rem;
+  width: 100%;
+}
 
 /* ----------PSEUDO CLASSES---------- */
 .links:hover {
