Refactor 'saved-events.jsx' component to disable edit icon if no locations are selected. #11

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -592,8 +592,12 @@ body {
   margin: 0;
 }
 
-.saved-itinerary-footer-container > i {
+.itinerary-icons {
   cursor: pointer;
+}
+
+.itinerary-icons-disabled {
+  color: gray;
 }
 
 .itinerary-location {
