--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -57,6 +57,12 @@ body {
   cursor: pointer;
 }
 
+.searchbar-container {
+  width: 100%;
+  height: 50px;
+  background-color: #292826;
+}
+
 /* ----------HOME BANNER---------- */
 
 .banner-container {
@@ -1008,6 +1014,10 @@ body {
   .header-layout-container-2 {
     display: flex;
     padding: 0 30px;
+  }
+
+  .searchbar {
+    width: 60vw;
   }
 }
 
