--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -57,7 +57,8 @@ body {
   cursor: pointer;
 }
 
-.searchbar-container {
+.pop-up-container {
+  display: none;
   width: 100%;
   height: 50px;
   background-color: #292826;
@@ -1018,6 +1019,10 @@ body {
 
   .searchbar {
     width: 60vw;
+  }
+
+  .pop-up-container {
+    display: flex;
   }
 }
 
