--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -206,14 +206,14 @@ body {
 }
 
 .results-container {
-  width: 1200px;
+  width: 83vw;
   height: 800px;
   box-shadow: 0 4px 4px rgb(0 0 0 / 25%);
   border-radius: 20px 20px 0;
 }
 
 .results-img {
-  flex-basis: 20%;
+  width: 20%;
   height: 160px;
   object-fit: cover;
   user-select: none;
@@ -221,22 +221,25 @@ body {
 
 .results-performer-container {
   height: 160px;
-  flex-basis: 80%;
+  width: 80%;
   background-color: #292826;
   border-top-right-radius: 20px;
 }
 
 .results-performer-txt {
   font-family: Montserrat, sans-serif;
-  font-size: 96px;
   font-weight: bold;
   margin: 0;
   user-select: none;
   color: #f4563c;
 }
 
+.ft-size-default {
+  font-size: 82px;
+}
+
 .ft-size-1 {
-  font-size: 58px;
+  font-size: 52px;
 }
 
 .ft-size-2 {
@@ -248,7 +251,7 @@ body {
 }
 
 .ft-size-4 {
-  font-size: 24px;
+  font-size: 22px;
 }
 
 .results-events-container {
@@ -265,22 +268,23 @@ body {
 
 .results-event-date-container {
   height: 80px;
-  flex-basis: 20.3%;
+  width: 20.3%;
   background-color: #292826;
+  padding: 0 10px;
 }
 
 .results-event-date-container > h3 {
   font-family: Montserrat, sans-serif;
-  font-size: 28px;
+  font-size: 26px;
   font-weight: bold;
   color: #f4563c;
 }
 
 .results-event-venue-container {
   background-color: white;
-  padding-left: 30px;
+  padding: 0 30px;
   height: 80px;
-  flex-basis: 79.7%;
+  width: 79.7%;
 }
 
 .results-event-venue-container > h3 {
@@ -1001,6 +1005,14 @@ body {
   .home-header {
     font-size: 1.5em;
   }
+
+  .results-event-date-container > h3 {
+    font-size: 20px;
+  }
+
+  .results-event-venue-container > h3 {
+    font-size: 18px;
+  }
 }
 
 @media only screen and (max-width: 992px) {
@@ -1024,16 +1036,160 @@ body {
   .pop-up-container {
     display: flex;
   }
+
+  .results-container {
+    height: 760px;
+  }
+
+  .results-img {
+    height: 120px;
+  }
+
+  .results-event-date-container {
+    height: 60px;
+  }
+
+  .results-event-venue-container {
+    height: 60px;
+  }
+
+  .results-performer-container {
+    height: 120px;
+  }
+
+  .results-event-date-container > h3 {
+    font-size: 15px;
+  }
+
+  .ft-size-default {
+    font-size: 66px;
+  }
+
+  .ft-size-1 {
+    font-size: 42px;
+  }
+
+  .ft-size-2 {
+    font-size: 32px;
+  }
+
+  .ft-size-3 {
+    font-size: 22px;
+  }
+
+  .ft-size-4 {
+    font-size: 16px;
+  }
+
+  .results-no-events-txt {
+    font-size: 42px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
   .home-header {
     font-size: 1.25em;
   }
+
+  .results-container {
+    height: 740px;
+  }
+
+  .results-img {
+    height: 100px;
+  }
+
+  .results-performer-container {
+    height: 100px;
+  }
+
+  .results-event-date-container > h3 {
+    font-size: 11px;
+  }
+
+  .results-event-venue-container > h3 {
+    font-size: 15px;
+  }
+
+  .ft-size-default {
+    font-size: 56px;
+  }
+
+  .ft-size-1 {
+    font-size: 32px;
+  }
+
+  .ft-size-2 {
+    font-size: 22px;
+  }
+
+  .ft-size-3 {
+    font-size: 16px;
+  }
+
+  .ft-size-4 {
+    font-size: 14px;
+  }
+
+  .results-no-events-txt {
+    font-size: 34px;
+  }
 }
 
 @media only screen and (max-width: 576px) {
   .home-header {
     font-size: 1em;
+  }
+
+  .results-container {
+    height: 720px;
+  }
+
+  .results-img {
+    height: 80px;
+  }
+
+  .results-performer-container {
+    height: 80px;
+  }
+
+  .results-event-date-container {
+    height: 50px;
+  }
+
+  .results-event-venue-container {
+    height: 50px;
+  }
+
+  .results-event-date-container > h3 {
+    font-size: 10px;
+  }
+
+  .results-event-venue-container > h3 {
+    font-size: 14px;
+  }
+
+  .ft-size-default {
+    font-size: 56px;
+  }
+
+  .ft-size-1 {
+    font-size: 28px;
+  }
+
+  .ft-size-2 {
+    font-size: 22px;
+  }
+
+  .ft-size-3 {
+    font-size: 16px;
+  }
+
+  .ft-size-4 {
+    font-size: 14px;
+  }
+
+  .results-no-events-txt {
+    font-size: 28px;
   }
 }
