Add error catching to 'local-events.jsx' component. #12

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -199,6 +199,12 @@ body {
   right: 15px;
 }
 
+.home-error {
+  font-family: Montserrat, sans-serif;
+  height: 100%;
+  width: 100%;
+}
+
 /* ----------RESULTS---------- */
 
 .results-layout-container {
