--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -203,6 +203,7 @@ body {
   font-family: Montserrat, sans-serif;
   height: 100%;
   width: 100%;
+  padding: 0 10%;
 }
 
 /* ----------RESULTS---------- */
