Fix fonts to look the same on every browser.

--- a/server/public/layout.css
+++ b/server/public/layout.css
@@ -1,11 +1,11 @@
 /* ----------FONTS---------- */
 
 .ft-cooper-black {
-  font-family: "Cooper Black", sans-serif;
+  font-family: Cooper-Black-Std, sans-serif;
 }
 
 .ft-atf-franklin-gothic {
-  font-family: "ATF Franklin Gothic", sans-serif;
+  font-family: ATF-Franklin-Gothic, sans-serif;
 }
 
 .row {
